test/classes/inheritance/typeMethodOverrideNoKeyword.good
typeMethodOverrideNoKeyword.chpl:17: error: Cat.getBuildingType override keyword required for method matching signature of superclass method
typeMethodOverrideNoKeyword.chpl:18: error: Cat.getSelfType override keyword required for method matching signature of superclass method
